[package]
name = "betelgeuse-pow"
version = "0.0.2"
authors = ["MVS Core DEV Team"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0" }
log = "0.4"
lru-cache = "0.1"
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1.4"
parking_lot = "0.10.0"
humantime = "2.0.1"
once_cell = "1.5"
sp-blockchain = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-consensus = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-consensus-pow = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-runtime = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-inherents = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-core = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-api = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sp-application-crypto = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sc-client-api = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sc-consensus-pow = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
sc-keystore = { git = "https://github.com/Sarmale-Team/substrate", rev = "62e252b" }
betelgeuse-primitives = { path = "../primitives" }
betelgeuse-runtime = { path = "../runtime" }
betelgeuse-randomx = { path = "randomx" }
