[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Hyperspace CLI interface."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-cli"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[dependencies]
# crates
serde = { version = "1.0.125", features = ["derive"] }
toml  = { version = "0.5.7" }
# substrate
sc-cli        = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sc-client-api = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sc-service    = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sc-tracing    = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
