[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "FRAME pallet to manage balances"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-balances"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
serde = { version = "1.0.118", optional = true }
# hyperspace
hyperspace-balances-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
hyperspace-support                  = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[dev-dependencies]
# substrate
pallet-transaction-payment = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core                    = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io                      = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = [
	"hyperspace-balances-rpc-runtime-api/std",
	"hyperspace-support/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
