[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "FRAME pallet to manage balances"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-balances"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
log   = { version = "0.4.14" }
paste = { version = "1.0.5", optional = true }
serde = { version = "1.0.125", optional = true }
# hyperspace
hyperspace-balances-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
hyperspace-support                  = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }

[dev-dependencies]
# substrate
pallet-transaction-payment = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-core                    = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-io                      = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = [
	"hyperspace-balances-rpc-runtime-api/std",
	"hyperspace-support/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"paste",
	"frame-support/try-runtime",
]
