[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "FRAME to claim airdrop"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-claims"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.1.0"

[dependencies]
# crates
array-bytes = { version = "1.1.0" }
codec       = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
log         = { version = "0.4.14" }
serde       = { version = "1.0.124", optional = true }
serde_json  = { version = "1.0.62", optional = true }
# hyperspace
hyperspace-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[dev-dependencies]
# crates
libsecp256k1 = { version = "0.3.5" }
# hyperspace
hyperspace-balances = { path = "../balances" }
# substrate
sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
	"serde_json",
]
hyperspace-std  = [
	"hyperspace-support/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
