[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "FRAME pallet for democracy"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-democracy"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
serde = { version = "1.0.118", optional = true, features = ["derive"] }
# hyperspace
hyperspace-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
hex-literal = "0.3.1"
# hyperspace
hyperspace-balances = { path = "../balances" }
hyperspace-support  = { features = ["easy-testing"], path = "../support" }
# substrate
pallet-scheduler     = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core              = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-storage           = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
substrate-test-utils = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"codec/std",
	"serde",
	"hyperspace-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
