[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Dynamic fee handling for EVM."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dvm-dynamic-fee"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.0.0"


[dependencies]
codec               = { default-features = false, version = "1.3.7", package = "parity-scale-codec" }
serde               = { default-features = false, version = "1.0.123", optional = true, features = ["derive"] }

frame-support       = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
frame-system        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-core             = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-inherents        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-runtime          = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-std              = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
] 