[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Dynamic fee handling for EVM."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dvm-dynamic-fee"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.1.0"


[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
serde = { version = "1.0.123", default-features = false, features = ["derive"], optional = true }

frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-inherents  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[features]
default = ["std"]
std     = [
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]
